# megumin-bot

./: .breakpoints  README.md  functions.py  interpolasi.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  supp_func.py  wangy.py
rumus/: functions.py  hasil.docx  hummingCode.py  my_written_file.docx
