[tool.poetry]
name = "megumin-bot"
version = "0.3.6"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pandas = "^1.2.3"
flask = "^1.1.2"
googletrans = "^4.0.0-rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
