[tool.poetry]
name = "megumin-bot"
version = "0.3.6"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pandas = "^1.2.3"
flask = "^1.1.2"
googletrans = "^4.0.0-rc1"
PyNaCl = "^1.4.0"
youtube-dl = "^2021.4.17"
pafy = "^0.5.5"
validator = "^0.7.0"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
